# wgc

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml  rust.yml
examples/: capabilities.rs  hello_world.rs  save_image.rs  show_image.rs  tutorial.rs
src/: capabilities.rs  capture.rs  error.rs  frame.rs  lib.rs  picker.rs  settings.rs  wgc.rs
src/utils/: monitor.rs  picker.rs  qpc.rs  window.rs
