[package]
name = "wgc"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Atliac"]
description = "A simple wrapper for Windows Graphics Capture"
repository = "https://github.com/atliac/wgc"
documentation = "https://docs.rs/wgc"
homepage = "https://github.com/atliac/wgc"
readme = "README.md"
keywords = ["windows", "screen-capture", "recording", "machine-learning"]
categories = ["api-bindings", "asynchronous", "computer-vision", "multimedia::images", "os::windows-apis"]

[dependencies]
smart-default = "0.7.1"
thiserror = "2.0.18"
futures = { version = "0.3", optional = true }

[dependencies.windows]
version = "0.62"
features = [
]

[dev-dependencies]

[features]
default = ["sync", "async"]
sync = []
async = ["futures"]

[package.metadata.docs.rs]
all-features = true
