[package]
name = "wgc"
version = "0.0.7"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Atliac"]
description = "An ergonomic Rust wrapper for Windows.Graphics.Capture API"
repository = "https://github.com/atliac/wgc"
documentation = "https://docs.rs/wgc"
homepage = "https://github.com/atliac/wgc"
readme = "README.md"
keywords = ["windows", "screen-capture", "recording", "machine-learning"]
categories = ["api-bindings", "asynchronous", "computer-vision", "multimedia::images", "os::windows-apis"]

[dependencies]
smart-default = "0.7.1"
thiserror = "2.0.18"
windows-future = "0.3.2"
windows = { version = "0.62.2", features = [
    "Foundation_Metadata",
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Media_Core",
    "Media_MediaProperties",
    "Media_Transcoding",
    "Security_Cryptography",
    "Storage_Streams",
    "Storage",
    "System",
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "System_Threading",
    "Win32_System_Performance",
] }
tracing = { version = "0.1.44", optional = true }

[[example]]
name = "tutorial"
required-features = ["tracing"]

[dev-dependencies]
anyhow = "1.0.100"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25.9"
show-image = "0.14.1"

[features]
default = []
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
